--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,10 @@
 .header {
     grid-area: h;
-    background-color: green;
+    background-color:rgb(181, 245, 224);
 }
 
 .header img {
-    width: 20px;
+    width: 50px;
+    padding: 10px;
 }
 
